# stereo-arm-sim

./: .gitignore  backup.py  config.yaml  main.py  pyproject.toml
assets/calibration/: camera_params.json
src/: __init__.py  config.py
src/detection/: __init__.py  detector.py
src/geometry/: estimation.py  pointcloud.py
src/reconstruction/: __init__.py  pointcloud.py  viewer.py
src/utils/: __init__.py  config.py  helpers.py  logger.py
src/vision/: __init__.py  camera.py  detection.py  stereo.py  tracking.py
src/visualization/: __init__.py  plotter.py  viewer3d.py
