[project]
name = "stereo-arm-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.19"
dependencies = [
    "loguru>=0.7.3",
    "open3d>=0.19.0",
    "opencv-python>=4.12.0.88",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "ultralytics>=8.3.246",
]
